--- a/libararies.ipynb
+++ b/libararies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get a random number between 0 and 1: 0.9218384192012129\n",
-      "get a random number between 1 and 10: 7\n",
+      "get a random number between 0 and 1: 0.751219891196578\n",
+      "get a random number between 1 and 10: 2\n",
       "select a random item draw\n",
-      "shuffle a list ['joe', 'jane', 'jill', 'John', 'jack']\n"
+      "shuffle a list ['jack', 'jill', 'John', 'joe', 'jane']\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current: 2023-09-11 07:31:15.980143\n"
+      "current: 2023-09-12 23:51:30.782735\n"
      ]
     }
    ],
@@ -102,15 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current date 2023-09-11\n",
-      "current date 07:31:16.062091\n"
+      "current date 2023-09-12\n",
+      "current date 23:51:30.832703\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +130,9 @@
      "text": [
       "current year 2023\n",
       "current month 9\n",
-      "current day 11\n",
-      "current hour 7\n",
-      "current second 51\n"
+      "current day 12\n",
+      "current hour 23\n",
+      "current second 30\n"
      ]
     }
    ],
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "formatted date: 11/09/2023\n"
+      "formatted date: 12/09/2023\n"
      ]
     }
    ],
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "formatted time 07:39:24\n"
+      "formatted time 23:51:31\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current Folder c:\\Users\\siddhant new ac\\Desktop\\new batch\n"
+      "current Folder c:\\Users\\siddhant new ac\\Desktop\\new batch\\new batch\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -226,12 +226,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _walk at 0x0000028DE1BC47B0>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.walk('c') #walk through all folder and files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (4114475506.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[50], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    for path, folders, files in os.walk(r'C:\\Users\\siddhant new ac\\Downloads')\u001b[0m\n\u001b[1;37m                                                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_file=0\n",
+    "for path, folders, files in os.walk(r'C:\\Users\\siddhant new ac\\Downloads')\n",
+    "print('=>', path)\n",
+    "print('folders')\n",
+    "total_files += len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = r'C:\\Users\\siddhant new ac\\Downloads'\n",
+    "if os.path.exists(file):\n",
+    "    print('file exist')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file exist\n",
+      "size in bytes: 12288\n",
+      "size in kilobytes: 12.0\n",
+      "size in megabytes: 0.01171875\n",
+      "size in gigabytes: 1.1444091796875e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=r\"C:\\Users\\siddhant new ac\"\n",
+    "if os.path.exists(file):\n",
+    "    print('file exist')\n",
+    "    size=os.path.getsize(file)\n",
+    "    print('size in bytes:', size)\n",
+    "    print('size in kilobytes:', size/1024)\n",
+    "    print('size in megabytes:', size/(1024*1024))\n",
+    "    print('size in gigabytes:', size/(1024*1024*1024))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "files=os.listdir('')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
