--- a/analysis/pre processing-4.ipynb
+++ b/analysis/pre processing-4.ipynb
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
        "Name: Unnamed: 15, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2118,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2362,7 +2362,7 @@
        "[6 rows x 38 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2905,7 +2905,7 @@
        "48                                Unknown      18078      13635       13303  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2916,10 +2916,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 26</th>\n",
+       "      <th>Unnamed: 27</th>\n",
+       "      <th>Unnamed: 28</th>\n",
+       "      <th>Unnamed: 29</th>\n",
+       "      <th>Unnamed: 30</th>\n",
+       "      <th>Unnamed: 31</th>\n",
+       "      <th>Unnamed: 32</th>\n",
+       "      <th>Unnamed: 33</th>\n",
+       "      <th>Unnamed: 34</th>\n",
+       "      <th>Unnamed: 35</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>41</td>\n",
+       "      <td>30</td>\n",
+       "      <td>31</td>\n",
+       "      <td>25</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>29</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>29</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29</td>\n",
+       "      <td>29</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Immigrants</td>\n",
+       "      <td>Foreigners</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>..</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>29</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0  Unnamed: 1 Unnamed: 2        Unnamed: 3 Unnamed: 4  \\\n",
+       "count           41          30         31                25         30   \n",
+       "unique          13           3         14                24         29   \n",
+       "top     Immigrants  Foreigners     Africa  Northern America         ..   \n",
+       "freq            29          28          5                 2          2   \n",
+       "\n",
+       "       Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8 Unnamed: 9  ...  \\\n",
+       "count          30         30         30         30         30  ...   \n",
+       "unique         28         28         29         28         28  ...   \n",
+       "top            ..         ..         ..         ..         ..  ...   \n",
+       "freq            3          3          2          3          3  ...   \n",
+       "\n",
+       "       Unnamed: 26 Unnamed: 27 Unnamed: 28 Unnamed: 29 Unnamed: 30  \\\n",
+       "count           30          30          30          30          30   \n",
+       "unique          30          30          30          30          29   \n",
+       "top           2002        2003        2004        2005           1   \n",
+       "freq             1           1           1           1           2   \n",
+       "\n",
+       "       Unnamed: 31  Unnamed: 32  Unnamed: 33 Unnamed: 34  Unnamed: 35  \n",
+       "count           30           30           30          30           30  \n",
+       "unique          29           30           30          29           30  \n",
+       "top              3         2008         2009          ..         2011  \n",
+       "freq             2            1            1           2            1  \n",
+       "\n",
+       "[4 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(exclude=np.number) #exclude numerical columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3220236241.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df=\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df="
+   ]
   }
  ],
  "metadata": {
